--- a/RideTogether/app/src/main/res/layout/cards_layout.xml
+++ b/RideTogether/app/src/main/res/layout/cards_layout.xml
@@ -1,102 +1,193 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:tag="cards main container">
 
     <android.support.v7.widget.CardView
+
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/colorBGCards"
-        card_view:cardCornerRadius="10dp"
+        android:layout_height="380dp"
+    card_view:cardBackgroundColor="@color/colorBGCards"
 
-        card_view:cardElevation="5dp"
-        card_view:cardUseCompatPadding="true">
+    android:layout_margin="8dp">
 
-        <LinearLayout
+        <RelativeLayout
+            android:id="@+id/rlCv"
+
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:weightSum="100"
-            >
-             <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="50"
-            android:orientation="horizontal"
-            >
-                <ImageView
+            android:layout_height="match_parent">
+
+            <ImageView
                 android:id="@+id/imageView"
-                android:tag="image_tag"
-                android:layout_width="163dp"
-                android:layout_height="95dp"
-                android:layout_margin="5dp"
-                android:src="@drawable/ic_launcher"/>
-                 </LinearLayout>
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_launcher" />
 
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="30"
-                android:orientation="horizontal"
-                >
-
-                <TextView
-                    android:id="@+id/textViewName"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-
-
-                    android:text="Android Name"
-                    android:layout_gravity="center_vertical"
-                    android:textAppearance="?android:attr/textAppearanceMedium"/>
-
-
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="20"
-
-                android:layout_gravity="center_vertical">
-
-
-            <ImageView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView3"
-                android:layout_gravity="center"
-            android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
-            />
-
-                <TextView
-                    android:id="@+id/textViewRating"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="1"
-                    android:paddingTop="20dp"
-
-                    android:gravity="center"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_gravity="center" />
-
-            <ImageView
-                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView"
+                android:maxLines="3"
+                android:text="Android Name"
+                android:padding="8dp"
 
-                android:id="@+id/imageView4"
-                android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
+                android:textColor="#222"
+                android:textStyle="bold"
+                android:textSize="22sp" />
 
-                android:paddingTop="20dp"
-                android:layout_gravity="bottom" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewName"
+                android:maxLines="3"
+                android:padding="8dp"
+                android:textColor="#666"
+                android:textSize="14sp"
+                android:id="@+id/textView3" />
+            <!--android:text="@string/description"-->
+            <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+
+
+            android:layout_height="wrap_content"
+            android:layout_gravity="right">
+
             </LinearLayout>
 
-        </LinearLayout>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageView3"
+                android:src="@drawable/ic_keyboard_arrow_up_white_24dp"
+                android:layout_alignBottom="@+id/textViewName"
+                android:layout_alignParentEnd="true"/>
+
+            <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:id="@+id/imageView4"
+            android:src="@drawable/ic_keyboard_arrow_down_white_24dp"
+
+            android:paddingTop="20dp"
+            android:layout_gravity="bottom"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+        android:id="@+id/textViewRating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:paddingTop="20dp"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_gravity="right"
+                android:layout_above="@+id/imageView4"
+                android:layout_alignStart="@+id/imageView4"
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/textView3" />
+        </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+
 </LinearLayout>
+    <!--<android.support.v7.widget.CardView-->
+    <!--android:id="@+id/card_view"-->
+    <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--card_view:cardBackgroundColor="@color/colorBGCards"-->
+    <!--card_view:cardCornerRadius="10dp"-->
+
+    <!--card_view:cardElevation="5dp"-->
+    <!--card_view:cardUseCompatPadding="true">-->
+
+
+
+    <!--<RelativeLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="476dp"-->
+    <!--android:orientation="vertical"-->
+    <!--android:weightSum="100"-->
+    <!-->-->
+
+
+
+    <!--<ImageView-->
+    <!--android:id="@+id/imageView"-->
+    <!--android:tag="image_tag"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="183dp"-->
+    <!--android:src="@drawable/ic_launcher"-->
+    <!--android:layout_weight="5.45"-->
+    <!--android:layout_marginLeft="5dp"-->
+    <!--android:layout_marginRight="5dp"-->
+    <!--android:layout_marginTop="5dp" />-->
+
+    <!--<LinearLayout-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="120dp"-->
+    <!--android:orientation="vertical"-->
+    <!--android:layout_alignParentBottom="true"-->
+    <!-->-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:id="@+id/imageView3"-->
+    <!--android:src="@drawable/ic_keyboard_arrow_up_white_24dp"-->
+    <!--/>-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/textViewName"-->
+    <!--android:layout_width="162dp"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:text="Android Name"-->
+    <!--android:layout_gravity="center_vertical"-->
+    <!--android:textAppearance="?android:attr/textAppearanceMedium"/>-->
+    <!--<LinearLayout-->
+    <!--android:orientation="horizontal"-->
+    <!--android:layout_width="match_parent"-->
+
+
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_weight="5.45"-->
+    <!--android:layout_gravity="right">-->
+
+    <!--<TextView-->
+    <!--android:id="@+id/textViewRating"-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:text="1"-->
+    <!--android:paddingTop="20dp"-->
+    <!--android:gravity="center"-->
+    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+    <!--android:layout_gravity="right" />-->
+
+    <!--<ImageView-->
+    <!--android:layout_width="fill_parent"-->
+    <!--android:layout_height="wrap_content"-->
+
+    <!--android:id="@+id/imageView4"-->
+    <!--android:src="@drawable/ic_keyboard_arrow_down_white_24dp"-->
+
+    <!--android:paddingTop="20dp"-->
+    <!--android:layout_gravity="bottom" />-->
+    <!--</LinearLayout>-->
+
+    <!--</LinearLayout>-->
+
+
+    <!--</RelativeLayout>-->
+
+    <!--</android.support.v7.widget.CardView>-->
